Add C programming utilities and libcollect

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(libpipeworks CXX)
 cmake_minimum_required(VERSION 3.10)
 
-include_directories(include)
+include_directories(include util/collect/include)
 
-add_library(pipeworks SHARED src/engine.c src/game.c)
+add_subdirectory(util/collect)
+
+add_library(pipeworks SHARED src/engine.c src/game.c util/collect)
