Fix the other thing I forgot to fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ include_directories(include)
 add_subdirectory(pipeworks)
 add_subdirectory(test_game)
 
-install(DIRECTORY include DESTINATION include)
+install(DIRECTORY include/pipeworks DESTINATION include)
