Revert "Update Submodules"
This reverts commit 699870a64b02424b6dec02381fcf16cfe236f1ce.

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -2,8 +2,5 @@
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
 
 add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c)
-install(
-	TARGETS pipeworks
-	ARCHIVE DESTINATION lib
-)
+install(TARGETS pipeworks)
 
