--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "flac"]
 	path = flac
 	url = https://github.com/LightningCreations/flac.git
+[submodule "zlib"]
+	path = zlib
+	url = https://github.com/LightningCreations/zlib.git
