--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 project(libpipeworks C)
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+
 include_directories(include)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/SDL/include)
 include_directories(SDL/include)
 include_directories(libpng)
-include_directories(${CMAKE_CURRENT_BINARY_DIR}/flac)
-include_directories(flac/include)
 
 
 add_subdirectory(SDL)
