--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -1,5 +1,6 @@
+include(FindOpenMP)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types ${OpenMP_C_FLAGS}")
 
 add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c)
 
