--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -1,6 +1,6 @@
-include(FindOpenMP)
+include(FindThreads)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types ${OpenMP_C_FLAGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
 
 add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c)
 
