Add headers to CMakeLists

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -2,7 +2,7 @@ include(FindThreads)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
 
-add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c)
+add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c ../include/pipeworks/engine.h ../include/pipeworks/game.h ../include/pipeworks/thing.h ../include/pipeworks/pw-std.h)
 
 add_dependencies(pipeworks SDL2 png FLAC)
 target_link_libraries(pipeworks SDL2 png FLAC)
