--- a/test_game/CMakeLists.txt
+++ b/test_game/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/opt/vc/lib")
+
 add_executable(test_game src/main.c)
 add_dependencies(test_game pipeworks)
 target_link_libraries(test_game pipeworks)
