--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -2,15 +2,47 @@ include(FindThreads)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
 
-add_library(pipeworks src/engine.c src/thing.c src/game.c src/ll.c ../include/pipeworks/engine.h ../include/pipeworks/game.h ../include/pipeworks/thing.h ../include/pipeworks/pw-std.h)
+if(NOT DEFINED PW_BUILD_SHARED)
+set(PW_BUILD_SHARED ON)
+endif()
 
-add_dependencies(pipeworks SDL2 png FLAC)
-target_link_libraries(pipeworks SDL2 png FLAC)
-install(TARGETS pipeworks
+if(NOT DEFINED PW_BUILD_STATIC)
+set(PW_BUILD_STATIC ON)
+endif()
+
+if(NOT PW_BUILD_SHARED AND NOT PW_BUILD_STATIC)
+message(FATAL_ERROR "libpipeworks Error: Not building either pipeworks shared or pipeworks static")
+endif()
+
+if(PW_BUILD_SHARED)
+message("libpipeworks: Building Pipeworks Shared Library")
+set(PW_OBJ src/engine.c src/thing.c src/game.c src/ll.c ../include/pipeworks/engine.h ../include/pipeworks/game.h ../include/pipeworks/thing.h ../include/pipeworks/pw-std.h)
+add_library(pipeworks-shared SHARED ${PW_OBJ})
+target_link_libraries(pipeworks-shared SDL2 png FLAC)
+set_target_properties(pipeworks-shared PROPERTIES OUTPUT_NAME "pipeworks")
+set_target_properties(pipeworks-shared PROPERTIES SOVERSION 0)
+install(TARGETS pipeworks-shared
     EXPORT pipeworks
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib)
+add_library(pipeworks ALIAS pipeworks-shared)
+endif()
+if(PW_BUILD_STATIC)
+message("libpipeworks: Building Pipeworks Static Library")
+add_library(pipeworks-static STATIC ${PW_OBJ})
+set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks")
+target_link_libraries(pipeworks-static SDL2 png FLAC)
+install(TARGETS pipeworks-static
+    EXPORT pipeworks
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
+if(NOT PW_BUILD_SHARED)
+add_library(pipeworks ALIAS pipeworks-static)
+endif()
+endif()
+
 
 install(EXPORT pipeworks
     NAMESPACE pipeworks::
