--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wno-incompatible-pointer-types")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3 -Wno-incompatible-pointer-types")
 
 if(NOT DEFINED PW_BUILD_SHARED)
 set(PW_BUILD_SHARED ON)
