--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(libpipeworks C)
 cmake_minimum_required(VERSION 3.15)
 
+message(STATUS "Building libpipeworks")
+
 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -L/opt/vc/lib") # RPi compatibility
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/opt/vc/lib") # RPi compatibility
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
