--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -30,7 +30,11 @@ endif()
 if(PW_BUILD_STATIC)
 message(STATUS "libpipeworks: Building Pipeworks Static Library")
 add_library(pipeworks-static STATIC ${PW_OBJ})
+if(NOT WIN32)
 set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks")
+else()
+set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks_shared")
+endif()
 target_link_libraries(pipeworks-static SDL2 png FLAC)
 set_property(TARGET pipeworks-static PROPERTY C_STANDARD 11)
 install(TARGETS pipeworks-static
