--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.15)
 message(STATUS "Building libpipeworks")
 
 set(PNG_BUILD_ZLIB ON CACHE BOOL "Pipeworks uses internal ZLib by default")
-set(ZLIB_LIBRARY zlib)
+set(ZLIB_LIBRARIES zlib)
 set(ZLIB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/zlib ${CMAKE_CURRENT_BINARY_DIR}/zlib)
 set(WITH_OGG OFF CACHE BOOL "Build FLAC with OGG support")
 if(WIN32)
