Move include to the correct location

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -14,7 +14,8 @@ endif()
 
 if(PW_BUILD_SHARED)
 message(STATUS "libpipeworks: Building Pipeworks Shared Library")
-set(PW_OBJ src/engine.c src/thing.c src/game.c src/ll.c ../include/pipeworks/engine.h ../include/pipeworks/game.h ../include/pipeworks/thing.h ../include/pipeworks/pw-std.h)
+set(PW_OBJ src/engine.c src/thing.c src/game.c src/ll.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h)
+include_directories(include)
 add_library(pipeworks-shared SHARED ${PW_OBJ})
 target_link_libraries(pipeworks-shared SDL2 png FLAC)
 set_target_properties(pipeworks-shared PROPERTIES OUTPUT_NAME "pipeworks")
