--- a/test_game/CMakeLists.txt
+++ b/test_game/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_FLAGS "-g")
 add_executable(test_game src/main.c)
 add_dependencies(test_game pipeworks)
 target_link_libraries(test_game pipeworks)
+include_directories(../pipeworks/include)
