stdatomic compat on windows

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3 -Wno-incompatible-pointer-types")
+
+if(NOT MSVC)
+add_compile_options(-g -O3 -Wno-incompatible-pointer-types)
+endif()
 
 if(NOT DEFINED PW_BUILD_SHARED)
 set(PW_BUILD_SHARED ON)
