--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -37,7 +37,7 @@ add_library(pipeworks-static STATIC ${PW_OBJ})
 if(NOT WIN32)
 set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks")
 else()
-set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks_shared")
+set_target_properties(pipeworks-static PROPERTIES OUTPUT_NAME "pipeworks_static")
 endif()
 target_link_libraries(pipeworks-static SDL2 png FLAC)
 set_property(TARGET pipeworks-static PROPERTY C_STANDARD 11)
