Oh right, we 'fixed' that

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -16,7 +16,7 @@ message(FATAL_ERROR "libpipeworks Error: Not building either pipeworks shared or
 endif()
 
 
-add_library(pipeworks-objects OBJECT src/engine.c src/thing.c src/game.c src/ll.c ../include/pipeworks/engine.h ../include/pipeworks/game.h ../include/pipeworks/thing.h ../include/pipeworks/pw-std.h)
+add_library(pipeworks-objects OBJECT src/engine.c src/thing.c src/game.c src/ll.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h)
 
 if(PW_BUILD_SHARED)
 message(STATUS "libpipeworks: Building Pipeworks Shared Library")
