--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
-project(libpipeworks C)
 cmake_minimum_required(VERSION 3.15)
+project(libpipeworks C)
+
 
 message(STATUS "Building libpipeworks")
 
 set(PNG_BUILD_ZLIB ON CACHE BOOL "Pipeworks uses internal ZLib by default")
 set(ZLIB_LIBRARIES zlib)
 set(ZLIB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/zlib ${CMAKE_CURRENT_BINARY_DIR}/zlib)
+set(PIPEWORKS_SDL_ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/SDL)
+set(PIPEWORKS_PNG_ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/libpng)
+set(PIPEWORKS_FLAC_ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/flac)
 set(WITH_OGG OFF CACHE BOOL "Build FLAC with OGG support")
 
 add_subdirectory(zlib EXCLUDE_FROM_ALL)
