pipeworks_rust now compiles.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,4 @@ add_subdirectory(pipeworks)
 add_subdirectory(test_game)
 
 
-install(DIRECTORY include/pipeworks DESTINATION include)
+install(DIRECTORY pipeworks/include/pipeworks DESTINATION include)
