--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.0
+      with:
+        submodules: true 
     - name: Clang Build
       uses: ashutoshvarma/action-cmake-build@v1
       with:
@@ -21,6 +23,7 @@ jobs:
         cxx: clang++ # optional
         update-submodules: true
         parallel: 8
+        build-dir: ${{runner.workspace}}/build-clang 
     - name: gcc Build
       uses: ashutoshvarma/action-cmake-build@v1
       with:
@@ -30,3 +33,4 @@ jobs:
         cxx: g++ # optional
         update-submodules: true
         parallel: 8
+        build-dir: ${{runner.workspace}}/build-gcc
