--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: C/C++ Windows CI
+name: C/C++ CI Windows
 
 on:
   push:
@@ -14,23 +14,9 @@ jobs:
       uses: actions/checkout@v2.3.0
       with:
         submodules: true 
-    - name: Clang Build
+    - name: MSVC
       uses: ashutoshvarma/action-cmake-build@v1
       with:
-        # C Compiler for toolchain
-        cc: clang # optional
-        # C++ Compiler for toolchain
-        cxx: clang++ # optional
         update-submodules: true
         parallel: 8
-        build-dir: ${{runner.workspace}}/build-clang 
-    - name: gcc Build
-      uses: ashutoshvarma/action-cmake-build@v1
-      with:
-        # C Compiler for toolchain
-        cc: gcc # optional
-        # C++ Compiler for toolchain
-        cxx: g++ # optional
-        update-submodules: true
-        parallel: 8
-        build-dir: ${{runner.workspace}}/build-gcc
+        build-dir: ${{runner.workspace}}/build-clang
