--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -13,6 +13,8 @@ endif()
 
 add_library(pipeworks-objects OBJECT src/engine.c src/thing.c src/game.c src/ll.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h)
 
+target_include_directories(pipeworks-objects PRIVATE include)
+
 add_library(pipeworks-interface INTERFACE)
 
 
