[partially-broken] Un-'fix' cmake and do well-defined stuff instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,14 @@ if(NOT PIPEWORKS_USE_SYSTEM_LIBPNG)
 	add_subdirectory(libpng)
 else()
 	find_package(libpng)
+	add_library(png ALIAS libpng::png)
 endif()
 
 if(NOT PIPEWORKS_USE_SYSTEM_SDL)
 	add_subdirectory(SDL)
-	set(SDL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/SDL/include)
 else()
-	find_package(SDL)
+	find_package(SDL2)
+	add_library(SDL2 ALIAS SDL2::SDL2)
 endif()
 
 if(NOT PIPEWORKS_USE_SYSTEM_LIBFLAC)
@@ -36,6 +37,7 @@ set(WITH_OGG OFF CACHE BOOL "Build FLAC with OGG support")
 add_subdirectory(flac)
 else()
 	find_package(FLAC)
+	add_library(FLAC ALIAS FLAC::FLAC)
 endif()
 
 add_subdirectory(pipeworks)
