--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "libpng"]
 	path = libpng
 	url = https://github.com/LightningCreations/libpng.git
-[submodule "flac"]
-	path = flac
-	url = https://github.com/LightningCreations/flac.git
 [submodule "zlib"]
 	path = zlib
 	url = https://github.com/LightningCreations/zlib.git
+[submodule "libsndfile"]
+	path = libsndfile
+	url = https://github.com/erikd/libsndfile
