Finish replacing flac with libsndfile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,9 @@ message(STATUS "Building libpipeworks")
 option(PIPEWORKS_USE_SYSTEM_LIBRARIES "Blanket option to use system libraries by default" OFF)
 mark_as_advanced(PIPEWORKS_USE_SYSTEM_LIBRARIES)
 
-option(PIPEWORKS_USE_SYSTEM_LIBPING "Use System libpng rather than building it in pipeworks" ${PIPEWORKS_USE_SYSTEM_LIBRARIES})
+option(PIPEWORKS_USE_SYSTEM_LIBPNG "Use System libpng rather than building it in pipeworks" ${PIPEWORKS_USE_SYSTEM_LIBRARIES})
 option(PIPEWORKS_USE_SYSTEM_SDL "Use the system libSDL2 rather than building it" ${PIPEWORKS_USE_SYSTEM_LIBRARIES})
-option(PIPEWORKS_USE_SYSTEM_LIBFLAC "Use the system libFLAC rather than building it" ${PIPEWORKS_USE_SYSTEM_LIBRARIES})
-
+option(PIPEWORKS_USE_SYSTEM_LIBSNDFILE "Use the system libsndfile rather than building it" ${PIPEWORKS_USE_SYSTEM_LIBRARIES})
 
 if(NOT PIPEWORKS_USE_SYSTEM_LIBPNG)
 	set(PNG_BUILD_ZLIB ON CACHE BOOL "Pipeworks uses internal ZLib by default")
@@ -31,13 +30,10 @@ else()
 	add_library(SDL2 ALIAS SDL2::SDL2)
 endif()
 
-if(NOT PIPEWORKS_USE_SYSTEM_LIBFLAC)
-set(PIPEWORKS_FLAC_ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/flac)
-set(WITH_OGG OFF CACHE BOOL "Build FLAC with OGG support")
-add_subdirectory(flac)
+if(NOT PIPEWORKS_USE_SYSTEM_LIBSNDFILE)
+	add_subdirectory(libsndfile)
 else()
-	find_package(FLAC)
-	add_library(FLAC ALIAS FLAC::FLAC)
+	find_package(SndFile)
 endif()
 
 add_subdirectory(pipeworks)
