--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(pipeworks-interface INTERFACE)
 
 
 target_include_directories(pipeworks-interface INTERFACE $<INSTALL_INTERFACE:include>)
-target_link_libraries(pipeworks-interface INTERFACE SDL2 png SndFile)
+target_link_libraries(pipeworks-interface INTERFACE SDL2 png sndfile)
 
 install(TARGETS pipeworks-interface EXPORT pipeworks)
 
