--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_clang:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -24,7 +24,14 @@ jobs:
         update-submodules: true
         parallel: 8
         build-dir: ${{runner.workspace}}/build-clang 
-    - name: gcc Build
+  build_gcc:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.0
+      with:
+        submodules: true 
+    - name: Clang Build
       uses: ashutoshvarma/action-cmake-build@v1
       with:
         # C Compiler for toolchain
