Kill libpng and add a few new files

--- a/test_game/CMakeLists.txt
+++ b/test_game/CMakeLists.txt
@@ -2,4 +2,7 @@
 
 add_executable(test_game src/main.c)
 target_link_libraries(test_game pipeworks)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/menu DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 include_directories(../pipeworks/include)
