--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -14,12 +14,11 @@ endif()
 add_library(pipeworks-objects OBJECT src/engine.c src/thing.c src/sort.c src/game.c src/ll.c src/things/sprite.c src/pw_util.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h include/pipeworks/things/sprite.h)
 
 target_include_directories(pipeworks-objects PRIVATE include)
-target_include_directories(pipeworks-objects PRIVATE ${PIPEWORKS_PNG_ROOTDIR})
 add_library(pipeworks-interface INTERFACE)
 
 
 target_include_directories(pipeworks-interface INTERFACE $<INSTALL_INTERFACE:include>)
-target_link_libraries(pipeworks-interface INTERFACE SDL2 png sndfile)
+target_link_libraries(pipeworks-interface INTERFACE SDL2 sndfile)
 
 install(TARGETS pipeworks-interface EXPORT pipeworks)
 
