Remove libsndfile and add miniaudio and stb_image

--- a/pipeworks/CMakeLists.txt
+++ b/pipeworks/CMakeLists.txt
@@ -11,14 +11,14 @@ message(FATAL_ERROR "libpipeworks Error: Not building either pipeworks shared or
 endif()
 
 
-add_library(pipeworks-objects OBJECT src/engine.c src/thing.c src/sort.c src/game.c src/ll.c src/things/sprite.c src/pw_util.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h include/pipeworks/things/sprite.h)
+add_library(pipeworks-objects OBJECT src/3rdparty_impl.c src/engine.c src/thing.c src/sort.c src/game.c src/ll.c src/things/sprite.c src/pw_util.c include/pipeworks/engine.h include/pipeworks/game.h include/pipeworks/thing.h include/pipeworks/pw-std.h include/pipeworks/things/sprite.h)
 
 target_include_directories(pipeworks-objects PRIVATE include)
 add_library(pipeworks-interface INTERFACE)
 
 
 target_include_directories(pipeworks-interface INTERFACE $<INSTALL_INTERFACE:include>)
-target_link_libraries(pipeworks-interface INTERFACE SDL2 sndfile)
+target_link_libraries(pipeworks-interface INTERFACE SDL2)
 
 install(TARGETS pipeworks-interface EXPORT pipeworks)
 
